2013/10/28 (version 1.5)

- License changed to MIT.
- Fixed adding new tasks.


2013/10/23 (version 1.3)

- Start/Stop buttons no longer reset current project.
- Fixed parsing tags with taskw.
- Support for task notes.


2013/10/18

- Start/Stop button no longer closes the properties dialog.
- The taskw module now also reads completed and deleted tasks.
- Fixed completed tasks being shown by default.


2013/10/17

- Added a new module taskw.py, which is a simple database parser.
- Current task duration is shown in the properties dialog.
- Sorting by urgency temporarily doesn't work.


Version 1.2

- Tasks tagged with "pin" are always show at the top of the indicator menu.


Version 1.1

- Tasks tagged as "endless" moved to the end of the indicator menu.